apps/homelab/it-tools/it-tools_ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: it-tools-ingress
  namespace: it-tools
spec:
  entryPoints:
  - websecure
  - ext-websecure
  routes:
    # Must be authenticated
  - kind: Rule
    match: Host(`it-tools.1earn.ing`)
    middlewares:
      - name: authentik
        namespace: authentik
    services:
    - kind: Service
      name: it-tools-service
      passHostHeader: true
      port: 80
    priority: 10

    # Redirects for Authentik Outpost
  - kind: Rule
    match: Host(`it-tools.1earn.ing`) && PathPrefix(`/outpost.goauthentik.io/`)
    priority: 15
    services:
    - kind: Service
      namespace: authentik
      name: ak-outpost-authentik-embedded-outpost
      port: 9000

  tls: {} # Keep TLS object so it uses default certificate
